--- a/.github/workflows/merge.yml
+++ b/.github/workflows/merge.yml
@@ -3,7 +3,12 @@ name: Sync Fork with Upstream
 on:
   schedule:
     - cron: '0 0 * * *'  # Runs daily at midnight UTC
-  workflow_dispatch:     # Allows manual triggering
+  workflow_dispatch:
+    inputs:
+      branch:
+        description: "Branch to sync with upstream"
+        required: false
+        default: "main"  # Default to 'main' if not specified
 
 jobs:
   sync-fork:
