--- a/.github/workflows/merge-pages.yml
+++ b/.github/workflows/merge-pages.yml
@@ -26,9 +26,12 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          
+
+          # Ensure we checkout the correct branch
+          git checkout origin/gh-pages
+          git switch -c gh-pages  # Ensure it's a local branch
+
           # Try to merge - this will fail if there are conflicts
-          git checkout gh-pages
           git merge upstream/gh-pages --no-ff --no-edit --strategy-option=theirs
 
       - name: Push changes
